SalesforceToPaypal/force-app/main/default/objects/Payment_Transaction__c/Payment_Transaction__c.object-meta.xml
<CustomObject>
    <description>Stores PayPal payment transaction records</description>
    <label>Payment Transaction</label>
    <nameField>
        <displayFormat>TXN-{00000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>