SalesforceToPaypal/force-app/main/default/objects/Payment_Transaction__c/fields/PayPal_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>PayPal_Order_ID__c</fullName>
    <description>PayPal Order ID from PayPal API</description>
    <externalId>true</externalId>
    <label>PayPal Order ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>