SalesforceToPaypal/force-app/main/default/objects/Payment_Transaction__c/fields/PayPal_Response__c.field-meta.xml
<CustomField>
    <fullName>PayPal_Response__c</fullName>
    <description>Full PayPal API response JSON</description>
    <label>PayPal Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>